Fixes gn-check errors with enable_plugins=false.

BUG=666790
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2655653004
Cr-Commit-Position: refs/heads/master@{#446170}

Former-commit-id: 76ed9ed0d250af589239a52d427a1f72991dee71