content/shell/renderer/shell_content_renderer_client.cc
@@ -24,7 +24,7 @@
 #include "v8/include/v8.h"
 
 #if BUILDFLAG(ENABLE_PLUGINS)
-#include "ppapi/shared_impl/ppapi_switches.h"
+#include "ppapi/shared_impl/ppapi_switches.h"  // nogncheck
 #endif
 
 #if defined(ENABLE_MOJO_CDM)
